<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/customer_text_view"
            android:text="@string/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/customer_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_text_view">

            <RadioButton
                android:id="@+id/guest_customer_button"
                android:text="@string/customer_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/new_customer_button"
                android:text="@string/customer_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/returning_customer_button"
                android:text="@string/customer_returning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/mode_text_view"
            android:text="@string/checkout_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_radio_group" />

        <RadioGroup
            android:id="@+id/mode_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mode_text_view">

            <RadioButton
                android:id="@+id/mode_payment_button"
                android:text="@string/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/mode_payment_with_setup_button"
                android:text="@string/payment_with_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false" />

            <RadioButton
                android:id="@+id/mode_setup_button"
                android:text="@string/setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/link_text_view"
            android:text="@string/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/customer_radio_group" />

        <RadioGroup
            android:id="@+id/link_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_text_view">

            <RadioButton
                android:id="@+id/link_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/link_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/currency_text_view"
            android:text="@string/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mode_radio_group" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_text_view" />

        <TextView
            android:id="@+id/google_pay_text_view"
            android:text="@string/google_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/link_radio_group" />

        <RadioGroup
            android:id="@+id/google_pay_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_pay_text_view">

            <RadioButton
                android:id="@+id/google_pay_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/google_pay_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/default_billing_address"
            android:text="@string/default_billing_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_spinner" />

        <RadioGroup
            android:id="@+id/default_billing_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_billing_address">

            <RadioButton
                android:id="@+id/default_billing_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false" />

            <RadioButton
                android:id="@+id/default_billing_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />
        </RadioGroup>

        <TextView
            android:id="@+id/shipping_address"
            android:text="@string/shipping_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/google_pay_radio_group" />

        <RadioGroup
            android:id="@+id/shipping_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shipping_address">

            <RadioButton
                android:id="@+id/shipping_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/shipping_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:id="@+id/allowsDelayedPaymentMethods"
            android:text="@string/allowsDelayedPaymentMethods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_billing_radio_group" />

        <RadioGroup
            android:id="@+id/allowsDelayedPaymentMethods_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allowsDelayedPaymentMethods">

            <RadioButton
                android:id="@+id/allowsDelayedPaymentMethods_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false" />

            <RadioButton
                android:id="@+id/allowsDelayedPaymentMethods_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />
        </RadioGroup>

        <TextView
            android:id="@+id/automatic_pm_address"
            android:text="@string/automatic_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/shipping_radio_group" />

        <RadioGroup
            android:id="@+id/automatic_pm_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/automatic_pm_address">

            <RadioButton
                android:id="@+id/automatic_pm_on_button"
                android:text="@string/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/automatic_pm_off_button"
                android:text="@string/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false" />
        </RadioGroup>

            <Button
                android:id="@+id/reset_defaults_button"
                android:text="@string/reset_defaults"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allowsDelayedPaymentMethods_radio_group" />

            <Button
                android:id="@+id/reload_button"
                android:text="@string/reload_paymentsheet"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reset_defaults_button" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <TextView
            android:id="@+id/payment_method_text_view"
            android:text="@string/payment_method"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/custom_checkout_button"
            android:text="@string/checkout_custom"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_method_text_view" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_checkout_button" />

        <Button
            android:id="@+id/complete_checkout_button"
            android:text="@string/checkout_complete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.LinearProgressIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reload_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
